# C

./: .bashrc  .clang-format  .clang-tidy  .clang-tidy-3-jan-2020  .clang-tidy-old  .gdb_history  .gdbinit-17-jan-2021  .gdbinit-24-08-2020  .psql_history-postgres  .psqlrc  .vimrc  .vimrc-12-Sept-2010  .vimrc-advanced  .vimrc-local
C/: Makefile  README  employee.html  employee.txt  gmon.out  sample.csv  sample.csv0  tags
C++/benchmarks/: CacheBench  CacheBench.cpp  README  bench_ex1  bench_ex1.cpp  bench_ex2  bench_ex2.cpp  perf.data  perf.data.old
C++/benchmarks/tmp/cmake-3.19.2/Help/guide/tutorial/Testing/: TAG
C++/benchmarks/tmp/cmake-3.19.2/Help/guide/tutorial/Testing/20210111-1635/: Test.xml
C++/benchmarks/tmp/cmake-3.19.2/Help/guide/tutorial/Testing/Temporary/: LastCoverage_20210111-1635.log.tmp
C++/cmake_tutorial/: .gdb_history  CMakeLists.txt  CMakeLists.txt-12_Jan_2021  CMakeLists.txt-Step2  CMakeLists.txt-step9  CTestConfig.cmake  License.txt  TutorialConfig.h.in  project_test.cmake  tutorial.cxx-step9bak
C++/cmake_tutorial/MathFunctions/: CMakeLists.txt  CMakeLists.txt-18-jan-2021  CMakeLists.txt-step8bak
C++/cmake_tutorial/Testing/: TAG
C++/cmake_tutorial/cmake/: clang_tools.cmake  gcovr.cmake
C++/cmake_tutorial/html/: Test.MathFunctions_MakeTable.cxx.html  Test.MathFunctions_MathFunctions.cxx.html  Test.MathFunctions_mysqrt.cxx.html  Test.html  Test.tutorial.cxx.html
C++/examp1/: itree  itree.cpp
C/MACROS/: macro_ex1  macro_ex1.c
C/OVERFLOW/: .gdb_history  overflow  overflow.c  perf.data  perf.data.old
C/asserts/static/: static_asserts.c
C/bitfields/: bitfield2  bitfield2.c  bitfields  bitfields.c
C/constructor/: contructor  contructor.c
C/curl/: 1  Makefile  a.out  downloadcurl.c
C/endian/: endian  endian.c
C/ex10/: ex10  ex10.c
C/ex11/: ex11  ex11.c
C/ex12/: ex12-bak  ex12.c
C/ex13/: README  ex13  ex13.c  libmyfunc.c
C/ex13/include/: library.h
C/ex14/: app_gprof_data.txt  gmon.out  output.png-before  screen.out
C/ex14/in/: seed
C/ex14/src/: ex14.c  ex14.c-31-7-2020  ex14.c-5-Aug-2020
C/ex14/textfiles/: buchan.txt
C/ex14/tmp/: AFTER_TIME  BEFORE_TIME  cachegrind.out.5057  cachegrind.out.98  valgrind-out.txt
C/ex2/: ex2.c  ex2a
C/ex3/: ex3
C/ex4/: ex4-bak  ex4.c
C/ex5/: ex5-bak  ex5.c
C/ex6/: ex6-bak  ex6.c
C/ex7/: ex7.c
C/ex8/: ex8  ex8.c
C/ex9/: ex9  ex9.c
C/fib/: fib  fib.c
C/fork/: fork  fork.c
C/func/: func-bak  func.c
C/graph/: graph.c
C/graphics/: README  graphics1  graphics1.c  graphics1.gcno  static_checks.sh  ¬
C/graphics/VIMs_SRC/: index.html  stats.html
C/local/include/: localdebug2.h
C/maths1/: func41  func41.c  gmon.out
C/maths2/: gmon.out  xsquare  xsquare.c
C/memory/: README
C/memory/mem1/: Makefile  a.out  app_gprof_data.txt  gmon.out
C/memory/mem1/infer-out/: .infer_runstate.json  bugs.txt  logs  report.json  results.db
C/memory/mem1/infer-out/specs/: main.fad58de7366495db4650cfefac2fcd61.specs
C/memory/mem1/src/: mem1.c
C/memory/mem1/utils/: memory_leak.bash
C/memory/mem2/: a.out  memory_leak.cpp
C/memory/mem3/: mem3.c
C/mmap/mmap_example1/: mmap  mmap_example.c
C/mmap/mmap_text/: beatles.txt  mmap_file  mmap_memorytext.c
C/modulus/: modulus  modulus.c
C/profiler/: -no-pie  compile.sh  myprofiler  myprofiler.c  trace.c  trace.out
C/register/: register  register.c
C/sharedlibrary/: .gdb_history  Makefile  libfunc1.c  libfunc2.c  testlib.c  testlib.elf
C/sharedmemory/: Makefile  destroy_shmem.c  destroy_shmem.elf  readshmem.c  readshmem.elf  shared_memory.c  shared_memory.h  writeshmem.c  writeshmem.elf
C/shims/shimA/: .gdb_history  Makefile  fire.c  randtest.c  randtest.out  shim.c
C/signal/: signal_ex1  signal_ex1.c  signal_ex1.c-bak  signal_ex2
C/special_number/: special_number-bak  special_number.c
C/templates/: template.c
C/test/: Makefile
C/test/src/: test.c
C/threads/thread1/: Makefile
C/threads/thread1/src/: thread1.c
C/threads/thread2/: Makefile  gmon.out
C/threads/thread2/src/: thread2.c
C/tmp/: 1  1.txt  Makefile-bad  Makefile-ex6  callgrind.out.2404  disassembly.asm  employee.tex-bak  gmon.out  massif.out.10228  massif.out.10231  massif.out.10254  massif.out.1054  myfunctions.h  myfunctions.h-1st_july_2020  top-file
C/webclient/: common.h  tcpclient  tcpclient.c
C/webserver/: compile.sh  webserver  webserver.c
C/webserver_threadpool/: client.rb  compile.sh  myqueue.c  myqueue.h  n_connects.bash  webserver2  webserver2.c
C/window/: windows.c
C/wrap_function/: wrap_function.c  wrapfunc
C/write_binary/: .gdb_history  a.out  app_base.info  app_test.info  app_total.info  compile.sh  r_w_structs  r_w_structs-gcc-10  r_w_structs.c  r_w_structs.c.gcov  r_w_structs.gcda  r_w_structs.gcno  write_binary  write_binary.c
C/write_binary/test/: compile.sh  report-src.xml  test.c
C/write_binary/test/VIMs_SRC/: 0.html  index.html  stats.html
